# mpd-parser

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
benchmarks/: bench_mpd_parser.py  bench_mpegdash.py
manifests/: aws-media-tailor-vod-personalized-response-manifest.mpd  bigBuckBunny-onDemend.mpd  bigBuckBunny-simple.mpd  chunked-single-bitrate.mpd  client_manifest-720p-stereo-events.mpd  client_manifest-audio.mpd  client_manifest-ctv-events.mpd  client_manifest-events-multilang.mpd  client_manifest-events-nodvb.mpd  client_manifest-events.mpd  client_manifest-nointerlace-events.mpd  client_manifest-nosurround-ctv-multilang.mpd  client_manifest-pto_both-events.mpd  client_manifest.mpd  test_manifest_1mb.mpd
mpd_parser/: .gitignore  .pylintrc  README.md  pyproject.toml  setup.cfg
mpd_parser/manifests/: bitmovin-sample.mpd
mpd_parser/src/mpd_parser/: attribute_parsers.py  exceptions.py  parser.py  tags.py
mpd_parser/tests/: pytest.ini  test_manifets.py  test_tag.py
src/mpd_parser/: attribute_parsers.py  constants.py  exceptions.py  parser.py  tags.py  timeline_utils.py  validation.py
src/mpd_parser/models/: base_tags.py  composite_tags.py  segment_tags.py
tests/: conftest.py  test_assignment.py  test_attribute_parsers.py  test_base_tags.py  test_composite_tags.py  test_manifets.py  test_tag.py
