[metadata]
name = mpd-parser
version = 0.1.3
author = Avishay Cohen
author_email = avishay.c@gmail.com
description = A parser for mpd manifest files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avishaycohen/mpd-parser
project_urls =
    Bug Tracker = https://github.com/avishaycohen/mpd-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src